# wignax

./: README.md  enviroment.yml  pyproject.toml
examples/: 01-jaynes-cummings.ipynb  style.mplstyle
src/wignax/: __init__.py
src/wignax/core/: state.py
src/wignax/distributions/: __init__.py  boson.py  spin.py
src/wignax/dynamics/: solver.py
src/wignax/utils/: __init__.py  symplectic.py
